--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.html {
+html {
     margin: auto;
     flex-direction: column;
     font-family: 'Times New Roman', Times, serif;
@@ -12,7 +12,6 @@
     font-family: 'Times New Roman', Times, serif;
     padding: 2%;
 }
-
 
 li {
     font-size: 24px;
