--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,6 @@
 body {
     padding-top: 50px;
+    font-family: 'Times New Roman', Times, serif;
 }
 	
 .form_col {
@@ -12,8 +13,8 @@ body {
 }
 	
 input {
-	padding: 2px;
-	border: 1px solid #CCC;
+	padding: 5px;
+	border: 1px solid rgb(150, 233, 229);
 	border-radius: 2px;
 	outline: none; /* Retire les bordures appliquées par certains navigateurs (Chrome notamment) lors du focus des éléments <input> */
 }
@@ -25,10 +26,14 @@ input:focus {
 
 form {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #ffffffec;
     padding: 15px;
     width: 80%; 
     margin: 10%
+}
+
+textarea {
+    width: 85%;
 }
 	
 .correct {
